# Graphics-assignment-1

./: .gitignore  CMakeLists.txt
include/: buildSnowman.hpp  camera.hpp  dynamicFog.hpp  environment.hpp  forest.hpp  heightmap.hpp  model.hpp  object.hpp  objectLoader.hpp  rain.hpp  sky.hpp  texture.hpp
src/: buildSnowman.cpp  camera.cpp  dynamicFog.cpp  environment.cpp  forest.cpp  heightmap.cpp  main.cpp  model.cpp  object.cpp  objectLoader.cpp  rain.cpp  sky.cpp  texture.cpp
wPutInDebugFolder/: WE11a.mtl
